tests/neg/17284.check
-- [E187] Potential Issue Error: tests/neg/17284.scala:4:6 -------------------------------------------------------------
4 |  451.synchronized {} // error
  |  ^^^^^^^^^^^^^^^^
  |  Suspicious synchronized call on boxed class
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | You called the synchronized method on a boxed primitive. This might not be what
  | you intended.
   ---------------------------------------------------------------------------------------------------------------------
-- [E187] Potential Issue Error: tests/neg/17284.scala:8:4 -------------------------------------------------------------
8 |  x.synchronized {} // error
  |  ^^^^^^^^^^^^^^
  |  Suspicious synchronized call on boxed class
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | You called the synchronized method on a boxed primitive. This might not be what
  | you intended.
   ---------------------------------------------------------------------------------------------------------------------
-- [E187] Potential Issue Error: tests/neg/17284.scala:11:7 ------------------------------------------------------------
11 |  true.synchronized {} // error
   |  ^^^^^^^^^^^^^^^^^
   |  Suspicious synchronized call on boxed class
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | You called the synchronized method on a boxed primitive. This might not be what
   | you intended.
    --------------------------------------------------------------------------------------------------------------------
